--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -14,6 +14,11 @@
   border-bottom: 1px solid white;
 }
 
+.container-pro h5 {
+  color: rgb(161, 159, 159);
+  text-align: center;
+}
+
 
 .title-projects {
   font-size: 50px;
@@ -175,6 +180,11 @@
     clip-path: circle(400px at center);
   }
 
+
+  .container-pro h5 {
+    margin-bottom: 0px;
+  }
+
   .techs span {
     padding: 2px;
     font-size: 8px;
@@ -206,6 +216,10 @@
   .container-projects {
     flex-direction: column;
     align-items: center;
+  }
+
+  .container-pro h5 {
+    margin-bottom: -50px;
   }
 
   .container-pro {
